--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.BYPASS_IMMERSIVE_MODE_CONFIRMATION" />
 
     <protected-broadcast android:name="org.lineageos.flipflap.KILL_ACTIVITY" />
 
